--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue": "~2.3.4",
     "vue-router": "^2.7.0",
     "vuelidate": "^0.5.0",
-    "vuex": "^2.3.1"
+    "vuex": "^2.3.1",
+    "vuex-router-sync": "^4.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
