--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "quasar-framework": "^0.14.1",
     "vivus": "^0.4.2",
     "vue": "~2.3.4",
+    "vue-password-strength-meter": "^1.1.0",
     "vue-router": "^2.7.0",
     "vuelidate": "^0.5.0",
     "vuex": "^2.3.1",
-    "vuex-router-sync": "^4.2.0"
+    "vuex-router-sync": "^4.2.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
