--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "babel-runtime": "^6.25.0",
+    "base-64": "^0.1.0",
     "jquery": "^3.2.1",
     "quasar-extras": "0.x",
     "quasar-framework": "^0.14.1",
