--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "quasar-framework": "^0.14.1",
     "vivus": "^0.4.2",
     "vue": "~2.3.4",
+    "vue-moment": "^2.0.2",
     "vue-password-strength-meter": "^1.1.0",
     "vue-router": "^2.7.0",
     "vuelidate": "^0.5.0",
